--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -531,7 +531,7 @@ p.other-cities {
     display: flex !important;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0px 8px;
+    /* padding: 10px 0px 8px; */
     background: "linear-gradient(119deg, #6730B2 -20.39%, #EE7464 80.65%)",
   }
 
@@ -666,7 +666,7 @@ p.other-cities {
   }
 
   .decContainer {
-    justify-content: flex-start !important;
+    justify-content: center !important;
     width: 100%;
   }
 
@@ -898,4 +898,43 @@ p.other-cities {
       height: 130px !important;
     }
   }
+}
+
+
+/* login form css */
+
+.input-field {
+  background-color: #D9D9D9;
+}
+
+.input-field:focus {
+  background-color: #D9D9D9;
+  border-color: none;
+}
+
+.form-control {
+  outline: none;
+  box-shadow: none !important;
+}
+
+.phone-code{
+  box-shadow: 12px 26px 50px 0px #5A6CEA12;
+  background-color: #D9D9D9;
+}
+
+.phone-number-span{
+  color: #9252AA !important; 
+}
+
+.otp-failed{
+  border: 1px solid #FF6666;
+  background-color: #FFE0E0;
+}
+
+/* decoration page css*/
+@media (max-width: 800px){
+.svg-inline--fa {
+    height: 12px;
+    margin: 8px 0 0;
+}
 }
