--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -171,9 +171,7 @@ button.continuebtnchef.btn.btn-primary {
 
 
 
-.rightSeccheckout.chef {
-  height: 86vh;
-}
+
 
 .datepickerSec {
   /* margin: 0 20px 0 0; */
@@ -190,6 +188,7 @@ button.continuebtnchef.btn.btn-primary {
 .leftSeccheckout {
   padding: 20px 5% 20px 20px !important;
   box-sizing: border-box;
+  height: 50rem !important;
 }
 
 .rightSeccheckout {
@@ -533,10 +532,10 @@ p.other-cities {
   .order-container {
     padding: 9px 9px;
   }
-
+/* 
   .rightSeccheckout.chef {
     height: auto;
-  }
+  } */
 
   .mobileViewHeader {
     color: #fff;
