--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -153,6 +153,9 @@ li.inclusionstyle {
   padding-top: 4px;
   margin-left: 28px;
 }
+.tabButton{
+  border: none;
+}
 
 button.continuebtnchef.btn.btn-primary {
   justify-content: space-between !important;
@@ -464,7 +467,8 @@ p.other-cities {
   font-size: 20px !important;
 }
   button.continuebtnchef.btn.btn-primary {
-    width: 90% !important;
+    width: 94% !important;
+        border-radius: 24px !important;
   }
 
   .selectdateContainer {
@@ -474,7 +478,7 @@ p.other-cities {
   }
 
   p.selectdateContainerheadig {
-    font-size: 135% !important;
+    font-size: 70% !important;
   }
 
   .selectdatesecouter {
@@ -482,12 +486,11 @@ p.other-cities {
   }
 
   .personsectionprice p {
-    font-size: 108% !important;
+    font-size: 61% !important;
   }
-
   .billheading {
-    font-size: 78%;
-  }
+    font-size: 79% !important;
+}
 
   .selectdateContainersec {
     width: 99% !important;
@@ -532,11 +535,6 @@ p.other-cities {
   .order-container {
     padding: 9px 9px;
   }
-/* 
-  .rightSeccheckout.chef {
-    height: auto;
-  } */
-
   .mobileViewHeader {
     color: #fff;
     display: flex !important;
@@ -855,6 +853,45 @@ p.other-cities {
 }
 
 @media (max-width: 480px) {
+  button.viewbtn.btn.btn-primary {
+    border-radius: 42px !important;
+    padding: 0px 9px !important;
+    font-size: 11px !important;
+    height: 21px;
+}
+  button.cuisinebtn {
+    width: 74px;
+    border-radius: 27px !important;
+    padding: 6px 0 !important;
+    font-size: 11px !important;
+}
+  button.cusinebtn {
+    border-radius: 27px !important;
+    padding: 3px 8px !important;
+    font-size: 12px !important;
+    border: 1px solid !important;
+}
+  .dish-item-inner {
+    height: 134px;
+}
+.d-flex.justify-content-between.w-100.px-3.dishPrice {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+  align-items: end;
+}
+.dish-price {
+  font-size: 93%;
+  padding: 2px 0 0px;
+}
+button.pluBtn.btn.btn-primary img {
+  width: 19px !important;
+  height: 19px !important;
+}
+.order-container .dish-name {
+  font-size: 69%;
+  min-height: 45px;
+  padding: 6px 11px 0;
+}
   p.subheading {
     font-size: 12px;
     line-height: 16px;
@@ -886,7 +923,12 @@ p.other-cities {
     margin-bottom: 10px !important;
     width: 32% !important;
   }
-
+  p.req-sec {
+    font-size: 14px !important;
+}
+p.req-des {
+  font-size: 12px !important;
+}
   .ingredientleftsec {
     margin-right: 0 !important;
     margin-left: 10px !important;
@@ -911,7 +953,7 @@ p.other-cities {
   }
 
   p.billheading {
-    font-size: 76% !important;
+    font-size: 65% !important;
   }
 
   p.selectdateContainerheadig {
@@ -919,16 +961,13 @@ p.other-cities {
     font-weight: 700 !important;
   }
 
-  .personsectionprice p {
-    font-size: 62% !important;
-  }
-
   .ingredientrightsec {
     font-size: 10px !important;
   }
 
   .tabButton {
-    padding: 5px 15% !important;
+    padding: 1px 8% !important;
+
   }
 }
 
@@ -984,3 +1023,13 @@ p.other-cities {
     font-size: 10px !important;
   }
   }
+
+
+
+@media (max-width: 321px ) {
+  .order-container .dish-name {
+    font-size: 55%;
+    min-height: 43px;
+    padding: 9px 11px 0;
+}
+}
