--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -85,6 +85,7 @@ code {
 .chkeoutBottun {
   margin: 23px 0 14px;
   width: 100%;
+  border-radius: 24px !important;
 }
 
 img {
@@ -170,14 +171,7 @@ button.continuebtnchef.btn.btn-primary {
   left: 0;
   right: 0;
   margin: 0 auto;
-}
-
-
-
-
-
-.datepickerSec {
-  /* margin: 0 20px 0 0; */
+  border-radius: 24px !important;
 }
 
 .righysercchefinner {
@@ -186,19 +180,13 @@ button.continuebtnchef.btn.btn-primary {
   align-items: top;
   flex-wrap: wrap;
   padding: 4px;
+ height:80vh;
+  overflow-y: scroll;
 }
 
 .leftSeccheckout {
   padding: 20px 5% 20px 20px !important;
   box-sizing: border-box;
-  height: 50rem !important;
-}
-
-.rightSeccheckout {
-  /* padding: 20px 40px 20px 20px !important; */
-  box-sizing: border-box;
-  /* width: 37%; */
-  height: 50rem !important;
 }
 
 .checkoutInputType {
@@ -277,7 +265,7 @@ button.viewbtn.btn.btn-primary {
 }
 
 .order-container {
-  background-color: #EDEDED;
+  background-color: #edededc9;
   padding: 20px;
 }
 
@@ -445,8 +433,57 @@ p.m-0.p-0.fw-bold.filter-price-tag {
 .prod-details {
   padding: 0 0 0 19px;
 }
+/* login form css */
+
+.input-field {
+  background-color: #D9D9D9;
+}
+
+.input-field:focus {
+  background-color: #D9D9D9;
+  border-color: none;
+}
+
+.form-control {
+  outline: none;
+  box-shadow: none !important;
+}
+
+.phone-code{
+  box-shadow: 12px 26px 50px 0px #5A6CEA12;
+  background-color: #D9D9D9;
+}
+
+.phone-number-span{
+  color: #9252AA !important; 
+}
+.timepkerSec {
+  width: 49% !important;
+  padding: 5px 18px 9px !important;
+}
+.otp-failed{
+  border: 1px solid #FF6666;
+  background-color: #FFE0E0;
+}
+.prod-detailsp {
+  padding-left: 22px;
+}
+
 /* select date chef flow */
 @media (max-width: 800px) {
+  .prod-detailsp {
+    padding-left: 0px;
+  }
+  .checoutSec.my-3.gap-5.overflow-x-hidden.overflow-y-auto {
+    margin-top: 9px !important;
+}
+  .filter-price-tag {
+    font-size: 10px !important;
+  }
+  .svg-inline--fa {
+    height: 12px;
+    margin: 8px 0 0;
+}
   p.ordersummeryname {
     font-size: 11px;
     min-height: 52px;
@@ -468,7 +505,6 @@ p.other-cities {
 }
   button.continuebtnchef.btn.btn-primary {
     width: 94% !important;
-        border-radius: 24px !important;
   }
 
   .selectdateContainer {
@@ -765,28 +801,23 @@ p.other-cities {
   .checoutSec {
     flex-direction: column !important;
   }
-
-  .leftSeccheckout {
-    padding: 5px 15px !important;
-    box-sizing: border-box;
-    width: 96% !important;
-    margin: 0 auto 20px !important;
-    border-radius: 10px;
+  .rightSeccheckout {
+    width: 95% !important;
+    margin: 0 2%;
+}
+    .leftSeccheckout {
+      padding: 13px 16px !important;
+      box-sizing: border-box;
+      width: 96% !important;
+      margin: 0 auto 1px !important;
+      border-radius: 10px;
+      overflow: hidden;
+  
   }
 
   .checkoutInputType {
     flex-direction: column !important;
   }
-
-  /* .rightSeccheckout {
-    padding: 5px 15px !important;
-    box-sizing: border-box;
-    width: 96% !important;
-    margin: 0 auto 20px !important;
-    border-radius: 10px;
-    height: auto !important;
-  } */
-
   .checkoutProblemWhatsappButton {
     border-radius: 10px;
     width: 77%;
@@ -850,9 +881,48 @@ p.other-cities {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 1000;
   }
+  .checkoutmobileview{
+    .timepkerSec {
+      width: 46% !important;
+      background-color: #fff;
+  }
+  .checoutSec {
+    padding: 0 5px !important;
+    margin-top: 7px !important;
+}
+.decoratore-note {
+  font-size: 11px !important;
+}
+.rightSeccheckout {
+  width: 96% !important;
+  margin: 14px 1% 0 !important;
+  border-radius: 13px !important;
+  box-shadow: none !important;
+  padding: 7px 21px !important;
+}
+.checkoutRightImg{
+  height: auto;
+  border-radius: 10px;
+}
+.decor-commemnts {
+  font-size: 12px !important;
+  color: #efefef2b !important;
+  font-weight: 400 !important;
+}
+.ordersummaryproduct {
+  width: 50% !important;
+}
+  }
 }
 
 @media (max-width: 480px) {
+  .personsectionprice p {
+    font-size: 65% !important;
+} 
+  .tabButton {
+    padding: 1px 8% !important;
+
+  }
   button.viewbtn.btn.btn-primary {
     border-radius: 42px !important;
     padding: 0px 9px !important;
@@ -921,7 +991,8 @@ button.pluBtn.btn.btn-primary img {
   .ingredientsec {
     padding: 11px 5px !important;
     margin-bottom: 10px !important;
-    width: 32% !important;
+    width: 45% !important;
+    margin-right: 11px;
   }
   p.req-sec {
     font-size: 14px !important;
@@ -929,25 +1000,46 @@ button.pluBtn.btn.btn-primary img {
 p.req-des {
   font-size: 12px !important;
 }
-  .ingredientleftsec {
-    margin-right: 0 !important;
-    margin-left: 10px !important;
-    width: 70% !important;
-    padding: 8px !important;
+.ingredientrightsecheading {
+  font-size: 72% !important;
+  line-height: 13px;
+}
+.ingredientleftsec {
+  margin-right: 8% !important;
+  width: 50% !important;
+}
+.ingredientrightsecsibheading {
+  font-size: 70% !important;
+}
+.req-applicance-details p {
+  padding: 2px 0 !important;
+  font-size: 12px !important;
+  margin-bottom: 2px !important;
+}
+}
 
+@media (max-width: 380px){
+  .personsectionprice p {
+    font-size: 58% !important;
+}
+  .dish-item-inner {
+    height: 123px;
   }
-
-  .ingredientrightsecheading {
-    font-size: 100% !important;
-  }
-
-  .ingredientrightsecsibheading {
-    font-size: 88% !important;
-    font-weight: 600 !important;
-  }
+  .dish-image {
+    width: 70px;
+    height: 64px;
+}
 }
 
 @media (max-width: 375px) {
+  
+.ingredientrightsecheading {
+  font-size: 104% !important;
+  line-height: 13px;
+}
+  .ingredientrightsecsibheading {
+    font-size: 100% !important;
+}
   .decCatPage .decimagecontainer {
     width: 46% !important;
   }
@@ -979,57 +1071,13 @@ p.req-des {
   }
 }
 
-
-/* login form css */
-
-.input-field {
-  background-color: #D9D9D9;
-}
-
-.input-field:focus {
-  background-color: #D9D9D9;
-  border-color: none;
-}
-
-.form-control {
-  outline: none;
-  box-shadow: none !important;
-}
-
-.phone-code{
-  box-shadow: 12px 26px 50px 0px #5A6CEA12;
-  background-color: #D9D9D9;
-}
-
-.phone-number-span{
-  color: #9252AA !important; 
-}
-
-.otp-failed{
-  border: 1px solid #FF6666;
-  background-color: #FFE0E0;
-}
-
-/* decoration page css*/
-@media (max-width: 800px){
-.svg-inline--fa {
-    height: 12px;
-    margin: 8px 0 0;
-}
-}
-
-@media (max-width: 800px){
-  .filter-price-tag {
-    font-size: 10px !important;
-  }
-  }
-
-
-
 @media (max-width: 321px ) {
   .order-container .dish-name {
     font-size: 55%;
     min-height: 43px;
     padding: 9px 11px 0;
+}
+.dish-item-inner {
+  height: 115px;
 }
 }
