--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -149,10 +149,10 @@ li {
 }
 
 li.inclusionstyle {
-  list-style: disc;
+  list-style: none;
   padding-left: 2px;
   padding-top: 4px;
-  margin-left: 28px;
+  margin-left: 1px;
 }
 .tabButton{
   border: none;
@@ -471,9 +471,21 @@ p.m-0.p-0.fw-bold.filter-price-tag {
 .bannerDecorationImage a {
   text-decoration: none;
 }
-
+button.dec-continueButton {
+  border-radius: 18px !important;
+  width: 100% !important;
+  font-size: 17px !important;
+  font-weight: 600;
+  letter-spacing: .5px;
+}
+button.dec-continueButton {
+  margin: 16px auto 12px !important;
+}
 /* select date chef flow */
 @media (max-width: 800px) {
+  .pri_details {
+    margin: 15px 0 0;
+}
   .prod-detailsp {
     padding-left: 0px;
   }
@@ -730,6 +742,7 @@ p.other-cities {
   .decDetails {
     margin-top: 0 !important;
     flex-direction: column !important;
+    padding-top: 0 !important;
   }
 
   .decDetailsLeft {
@@ -762,10 +775,6 @@ p.other-cities {
   .whyHoraSubheading {
     text-align: center;
     font-size: 70% !important;
-  }
-
-  .continueButton {
-    margin: 13px auto 13px !important
   }
 
   .whyHoraSecBox {
@@ -885,8 +894,10 @@ p.other-cities {
     z-index: 1000;
   }
   .checkoutmobileview{
+    position: relative;
+
     .timepkerSec {
-      width: 46% !important;
+      width: 48% !important;
       background-color: #fff;
   }
   .checoutSec {
@@ -897,8 +908,8 @@ p.other-cities {
   font-size: 11px !important;
 }
 .rightSeccheckout {
-  width: 96% !important;
-  margin: 14px 1% 0 !important;
+  width: 98% !important;
+  margin: 14px 1% 0 3px !important;
   border-radius: 13px !important;
   box-shadow: none !important;
   padding: 7px 21px !important;
@@ -909,7 +920,6 @@ p.other-cities {
 }
 .decor-commemnts {
   font-size: 12px !important;
-  color: #efefef2b !important;
   font-weight: 400 !important;
 }
 .ordersummaryproduct {
@@ -925,7 +935,9 @@ p.other-cities {
 }
 
 @media (max-width: 480px) {
-
+  .decCatPage .decimagecontainer p.pro_price {
+    font-size: 18px !important;
+}
   .personsectionprice p {
     font-size: 65% !important;
 } 
@@ -990,11 +1002,6 @@ button.pluBtn.btn.btn-primary img {
     padding: 0 8px !important;
     font-size: 63% !important;
 }
-  .pro_price {
-    margin: 8px 0 0px;
-    padding: 0 !important;
-    display: inline-block;
-}
   p.totalcount {
     margin-bottom: 0 !important;
 }
@@ -1042,7 +1049,9 @@ p.req-des {
 }
 
 @media (max-width: 375px) {
-  
+  .decCatPage .decimagecontainer p.pro_price {
+    font-size: 17px !important;
+}
 .ingredientrightsecheading {
   font-size: 104% !important;
   line-height: 13px;
@@ -1074,6 +1083,9 @@ p.req-des {
 }
 
 @media (max-width: 340px) {
+  .decCatPage .decimagecontainer p.pro_price {
+    font-size: 14px !important;
+}
   .textContainerhome h1 {
     font-size: 93% !important;
     padding: 0 20px !important;
