--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -490,6 +490,50 @@ button.dec-continueButton {
   div#faqQ {
     padding: 0 20px;
 }
+
+/* contact-us mobile view */
+
+.textContent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-us-main-heading{
+  width: 90%;
+  align-items: center;
+}
+.contact-us-secRight{
+  flex-direction: column;
+  align-items: center;
+}
+.contact-us-boxsection{
+  width: 90% !important;
+  margin-top: 15px;
+
+}
+.contact-us-second-heading{
+  padding: 30px !important;
+}
+
+.contact-us-img-section-1{
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-us-section-div{
+  width: 100%;
+  margin-top: 10px;
+}
+.contact-us-img{
+  border-radius: 5px;
+  
+}
+.contact-us-heading{
+  text-align: center;
+  margin-top: 10px;
+}
+
+/*  */
 p#city-description {
   padding: 0 20px;
 }
@@ -949,6 +993,16 @@ p.other-cities {
 }
 
 @media (max-width: 480px) {
+  /* .contact-us-img-section-1{
+    display: flex;
+  }
+  
+  .contact-us-img-section{
+    flex-direction: column;
+  } */
+  /* .contact-us-img{
+
+  } */
   .decCatPage .decimagecontainer p.pro_price {
     font-size: 18px !important;
 }
