--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -5,7 +5,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
-
+.button-style {
+  border: "2px solid rgb(157, 74, 147)";
+  background-color: "rgb(157, 74, 147)";
+  color: "#fff";
+  font-size: "16px";
+  padding: "10px";
+  border-radius: "5px";
+  display: "flex";
+  justify-content: "center";
+  align-items: "center";
+  margin: "23px auto 14px";
+  width: "93%";
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -241,7 +253,7 @@ button.continuebtnchef.btn.btn-primary {
 .custom-spinner {
   color: rgb(157, 74, 147);
   /* Replace with your desired color */
-  height: "300px";
+  padding: 90px 0;
 }
 
 .rotate-icon {
@@ -483,6 +495,9 @@ button.dec-continueButton {
 }
 button.dec-continueButton {
   margin: 16px auto 12px !important;
+}
+.no-orders {
+  padding: 100px 30px;
 }
 
 /* select date chef flow */
@@ -1275,9 +1290,9 @@ p.req-des {
   flex-direction: column;
   align-items: flex-end
 }
-.right-details , p{
+/* .right-details , p{
   text-align: end;
-}
+} */
 .left-details{
   display: flex;
   flex-direction: column;
