--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -554,60 +554,13 @@ button.dec-continueButton {
     flex-shrink: 0 !important;
   }
 
-  .order-id-status {
-    background: #b16bcb;
-    color: #ffffff;
-    padding: 10px !important;
-    border-radius: 0px !important;
-    width: 50% !important;
-    /* height: 62px !important; */
-  }
-
-  .order-id-h {
-    color: #fff;
-    font-family: Roboto !important;
-    font-size: 13px !important;
-    font-style: normal !important;
-    font-weight: 700 !important;
-    line-height: 15px !important;
-  }
-  .order-status-p {
-    color: #fff;
-    font-family: Poppins !important;
+  .order-status-button {
     font-size: 10px !important;
-    font-style: normal !important;
-    font-weight: 500 !important;
-    line-height: 15px !important;
   }
   .price-para {
     text-align: end !important;
   }
 
-  .order-status-p {
-    text-align: start !important;
-    /* color: green;  */
-    background-color: #e6ffe6;
-    /* border: 1px solid green; */
-    border-radius: 19px;
-    padding: 3px 6px;
-    width: 67% !important;
-  }
-
-  .order-info {
-    display: flex;
-    margin-top: 10px !important;
-    align-items: center;
-    gap: 10px;
-    color: #9252aa;
-    /* width: 390px; */
-    height: 62px;
-    top: 70px;
-    gap: 0px !important;
-    opacity: 0px;
-  }
-  .order-info-div {
-    display: flex;
-  }
   .header-icons {
     height: 10px !important;
     width: 10px !important;
@@ -781,14 +734,16 @@ button.dec-continueButton {
     max-width: calc(50% - 16px) !important;
     flex-basis: calc(50% - 16px) !important;
     border: 1px solid #dadada;
+    flex-direction: row !important;
     border-radius: 8px;
     padding: 5px !important;
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
-    gap: 10px !important;
+    gap: 20px !important;
     width: 50% !important;
+    padding-top: 15px !important;
   }
 
   .appliance-item img {
@@ -1746,71 +1701,74 @@ p {
 
 /* Order detail css */
 
+.orderheader-orderdetail {
+  background-color: #f2f2f2;
+}
+
 .order-detail-page {
   font-family: Arial, sans-serif;
   padding: 16px;
-  background-color: #f8f8f8;
+  /* background-color: #f8f8f8; */
   padding-top: 0;
 }
 
 .order-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   background-color: #dfdfdf;
-  padding: 16px;
-  border-radius: 8px;
+  padding: 0px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 16px;
-  padding-top: 1px;
-  padding-bottom: 0px;
 }
 
-.order-id-status {
+.order-header-left {
   background: #b16bcb;
   color: #ffffff;
   padding: 20px;
   border-radius: 5px;
-  width: 15%;
 }
+
 .order-id-h {
   text-align: start;
+  color: #fff;
+  font-family: Roboto !important;
+  font-size: 10px !important;
+  font-style: normal !important;
+  font-weight: 700 !important;
+  line-height: 15px !important;
 }
-.order-status-p {
+.order-status-button {
+  display: inline-block;
+  padding: 3px 10px;
+  font-style: normal;
+  font-weight: 500;
   text-align: center;
   color: #ffffff;
   background-color: #9252aa;
-  /* border: 1px solid green; */
+  font-family: Poppins;
+
   border-radius: 19px;
-  padding: 3px 6px;
-  width: 50%;
   margin-bottom: 10px;
 }
-.order-id-status p {
+.order-header-left p {
   margin: 0;
 }
 
-.order-info {
+.order-header-right {
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
   gap: 10px;
   color: #9252aa;
-  width: 390px;
-  height: 62px;
+  width: 75%;
+  padding-left: 20px;
   top: 70px;
   gap: 0px;
   opacity: 0px;
 }
 
-.order-info > div {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start !important;
-  align-items: center;
-  margin-left: 16px;
-}
-
-.order-info img {
+.order-header-right img {
   margin-right: 8px;
   height: 20px;
   width: 20px;
@@ -2250,30 +2208,30 @@ p {
 }
 
 /* Inclusion for the food */
-/* .container {
+.food-delivert-inclusions-container {
   margin-top: 1rem;
   max-width: 100% !important;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
   padding: 10px;
 }
-.container h5 {
+.food-delivert-inclusions-container h5 {
   color: #9252aa;
   font-weight: 700;
   font-size: 1.2em;
 }
-.list-unstyled {
+.list-unstyled-inclusion {
   list-style-type: none;
   padding-left: 0;
 }
-.list-unstyled li {
+.list-unstyled-inclusion li {
   display: flex;
   align-items: center;
   color: #b16bcb;
 }
-.list-unstyled span {
+.list-unstyled-inclusion span {
   margin-right: 0.5rem;
-} */
+}
 
 /* inclusion for live catering */
 
