--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -1585,8 +1585,7 @@ button.dec-continueButton {
   flex-direction: column;
   align-items: flex-end;
 }
-.right-details,
-p {
+.right-details p {
   text-align: end;
 }
 .left-details {
