--- a/hora-app/src/css/success.css
+++ b/hora-app/src/css/success.css
@@ -43,7 +43,7 @@
   max-width: 400px;
 }
 
-h2 {
+.confirm-order-details h2 {
   color: var(--Color---Text-Primary, #3e4462);
   font-feature-settings: "clig" off, "liga" off;
   margin-bottom: 10px;
@@ -53,7 +53,7 @@ h2 {
   font-weight: 500;
 }
 
-p {
+.confirm-order-details p {
   margin-bottom: 10px;
   color: var(--Color---Text-Secondary, #7e7e7e);
   text-align: center;
@@ -76,9 +76,8 @@ p {
   font-weight: 700;
 }
 
-h6 {
+.confirm-order-details h6 {
   color: #000;
-
   text-align: center;
   font-family: Roboto;
   font-size: 16px;
