--- a/hora-app/src/index.css
+++ b/hora-app/src/index.css
@@ -505,7 +505,10 @@ button.dec-continueButton {
   div#faqQ {
     padding: 0 20px;
   }
-
+.order-detail-page-decoration{
+  width: 100% !important;
+  padding: 0 !important;
+}
   /* My order mobile view */
   .order-list {
     width: 100% !important;
@@ -546,13 +549,6 @@ button.dec-continueButton {
     justify-content: space-between;
     padding: 0px !important;
     margin-top: 5px;
-  }
-
-  .order-detail-page {
-    font-family: Arial, sans-serif;
-    padding: 16px;
-    background-color: #f2f2f2 !important;
-    padding-top: 0;
   }
   /* Order Header mobile view css */
 
@@ -598,37 +594,24 @@ button.dec-continueButton {
     justify-content: space-between;
     padding: 10px !important;
   }
-
-  .tabs {
-    display: block !important;
-    margin-top: 15px !important;
-    margin-bottom: 0px !important;
-  }
-
   .tab.active {
     width: 33% !important;
-    height: 51.784px;
     border-top-right-radius: 15px !important;
     border-top-left-radius: 15px !important;
     color: #823d9d;
-    font-family: Roboto;
     font-size: 13px;
-    font-style: normal;
-    font-weight: 600;
   }
 
   .tab {
     width: 33% !important;
-    height: 51.784px;
     border-top-right-radius: 15px !important;
     border-top-left-radius: 15px !important;
     color: #969696;
-    font-family: Inter;
     font-size: 11px;
-    font-style: normal;
-    font-weight: 500;
   }
-
+  .tabs {
+    margin-bottom: 8px !important;
+}
   .advance-preparations-title {
     color: #9252aa;
     font-size: 20px;
@@ -705,13 +688,6 @@ button.dec-continueButton {
     font-weight: 600;
   }
 
-  .application-section-para {
-    color: #969696;
-    font-family: Inter !important;
-    font-size: 11px !important;
-    font-style: normal !important;
-    font-weight: 500 !important;
-  }
 
   .burner-count {
     display: flex;
@@ -1359,16 +1335,14 @@ button.dec-continueButton {
 }
 
 @media (max-width: 480px) {
-  /* .contact-us-img-section-1{
-    display: flex;
-  }
-  
-  .contact-us-img-section{
-    flex-direction: column;
-  } */
-  /* .contact-us-img{
-
-  } */
+  .order-header-left {
+    padding: 12px 13px !important;
+    border-radius: 0 !important;
+}
+h5.order-id-h {
+  margin-bottom: 0;
+  font-size: 9px;
+}
   .decCatPage .decimagecontainer p.pro_price {
     font-size: 18px !important;
   }
@@ -1469,6 +1443,16 @@ button.dec-continueButton {
 }
 
 @media (max-width: 380px) {
+  .order-header-right{
+    padding-left: 0 !important;
+  }
+  .order-header-left {
+    padding: 12px 8px !important;
+  }
+  h5.order-id-h {
+    margin-bottom: 0;
+    font-size: 8px;
+}
   .personsectionprice p {
     font-size: 58% !important;
   }
@@ -1482,6 +1466,15 @@ button.dec-continueButton {
 }
 
 @media (max-width: 375px) {
+  .order-id>div {
+    font-size: 14px;
+    margin-bottom: 1px;
+    font-weight: 600;
+}
+h6.order-otp{
+  font-size: 14px !important;
+  font-weight: 600;
+}
   .decCatPage .decimagecontainer p.pro_price {
     font-size: 17px !important;
   }
@@ -1719,11 +1712,10 @@ button.dec-continueButton {
   background-color: #f2f2f2;
 }
 
-.order-detail-page {
-  font-family: Arial, sans-serif;
-  padding: 16px;
-  /* background-color: #f8f8f8; */
-  padding-top: 0;
+.order-detail-page-decoration {
+  padding: 16px 0;
+  width: 70%;
+  margin: 0 auto;
 }
 
 .order-header {
@@ -1746,11 +1738,9 @@ button.dec-continueButton {
 .order-id-h {
   text-align: start;
   color: #fff;
-  font-family: Roboto !important;
-  font-size: 10px !important;
-  font-style: normal !important;
-  font-weight: 700 !important;
-  line-height: 15px !important;
+  font-family: Roboto;
+  font-size: 10px ;
+  font-weight: 700;
 }
 .order-status-button {
   display: inline-block;
@@ -1951,9 +1941,6 @@ button.dec-continueButton {
 .application-section-para {
   color: #969696;
   font-size: 15px;
-  font-weight: 500;
-  text-align: start;
-  /* margin: 0; */
 }
 
 .burner-count {
@@ -2149,12 +2136,17 @@ button.dec-continueButton {
 .product-container {
   display: flex;
   align-items: flex-start;
-  padding: 10px;
+ 
+  gap: 5%;
+}
+.decoration-container{
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   margin-bottom: 10px;
   background-color: #fff;
-  gap: 5%;
+  padding: 10px;
+  min-height: 305px;
+
 }
 
 .product-image-container {
