--- a/hora-app/src/css/success.css
+++ b/hora-app/src/css/success.css
@@ -20,6 +20,9 @@
 }
 
 @media (max-width: 321px) {
+  .confirm-order-details h2 {
+    font-size: 20px !important;
+  }
 }
 
 .confirm-order {
@@ -44,8 +47,7 @@
 }
 
 .confirm-order-details h2 {
-  color: var(--Color---Text-Primary, #3e4462);
-  font-feature-settings: "clig" off, "liga" off;
+  color: #3e4462;
   margin-bottom: 10px;
   font-family: Poppins;
   font-size: 24px;
@@ -55,9 +57,8 @@
 
 .confirm-order-details p {
   margin-bottom: 10px;
-  color: var(--Color---Text-Secondary, #7e7e7e);
+  color: #7e7e7e;
   text-align: center;
-  font-feature-settings: "clig" off, "liga" off;
   font-family: Poppins;
   font-size: 12px;
   font-style: normal;
