--- a/hora-app/src/css/Decoration.css
+++ b/hora-app/src/css/Decoration.css
@@ -13,7 +13,22 @@ justify-content: space-between !important;
 gap: 0 !important;
 align-items: center;
 }
-
+.rightsecdecinner.decoration{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding: 4px;
+}
+.need-more-info-sec {
+    margin: 35px 0 16px;
+    border-top: 1px solid #efefef;
+    padding: 17px 0 1px;
+}
+.checkoutRightImg {
+    height: 270px;
+      border-radius: 10px;
+      box-shadow: rgba(0, 0, 0, 0.18) 0px 1px 2px;
+  }
 
 
 @media (max-width:800px){
